hot fix for safari on iphone

--- a/css/style.css
+++ b/css/style.css
@@ -335,5 +335,5 @@ footer {
 }
 
 .nav-item > button.nav-link {
-    text-wrap: nowrap;
+    white-space: nowrap;
 }
